REST APIs Updates
